# stf_lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  stf-config.cmake
.github/: CODEOWNERS
.github/workflows/: ubuntu-build.yml
cmake/: GitVersionGenerator.cmake  StfGitVersionGenerator.cmake  lto.cmake  stf-config.cmake  stf_linker_setup.cmake
cmake/scripts/: gen_git_version.sh
docs/: Doxyfile.in
lib/: CMakeLists.txt  format_utils.cpp  stf_branch.cpp  stf_descriptor.cpp  stf_enums.cpp  stf_fstream.cpp  stf_generator.cpp  stf_git_version.cpp.in  stf_ifstream.cpp  stf_inst.cpp  stf_inst_reader.cpp  stf_isa_defaults.cpp  stf_ofstream.cpp  stf_pc_tracker.cpp  stf_protocol_data.cpp  stf_protocol_types.cpp  stf_reader.cpp  stf_reader_base.cpp  stf_record_types.cpp  stf_reg_def.cpp  stf_reg_state.cpp  stf_transaction.cpp  stf_transaction_record_reader.cpp  stf_transaction_writer.cpp  stf_writer.cpp  stf_writer_base.cpp  tilelink.cpp
stf-inc/: STFSymTab.hpp  STFSymTabBase.hpp  boost_pool.hpp  boost_small_vector.hpp  format_utils.hpp  print_utils.hpp  stf.hpp  stf_branch.hpp  stf_branch_decoder.hpp  stf_branch_reader.hpp  stf_buffered_reader.hpp  stf_clock_id.hpp  stf_compressed_chunked_base.hpp  stf_compressed_ifstream.hpp  stf_compressed_ifstream_base.hpp  stf_compressed_ifstream_single_threaded.hpp  stf_compressed_ofstream.hpp  stf_compression_buffer.hpp  stf_descriptor.hpp  stf_enum_utils.hpp  stf_enums.hpp  stf_env_var.hpp  stf_exception.hpp  stf_factory.hpp  stf_factory_decl.hpp  stf_filter_types.hpp  stf_fstream.hpp  stf_generator.hpp  stf_git_version.hpp  stf_ifstream.hpp  stf_indexer.hpp  stf_inst.hpp  stf_inst_reader.hpp  stf_isa_defaults.hpp  stf_item.hpp  stf_macro_utils.hpp  stf_object.hpp  stf_object_id.hpp  stf_ofstream.hpp  stf_packed_container.hpp  (+38 more)
stf-inc/boost_wrappers/: flat_map.hpp  pool.hpp  setup.hpp  small_vector.hpp
stf-inc/protocols/: channel_protocol.hpp  tilelink.hpp
stf-inc/zstd/: stf_zstd_compressor.hpp  stf_zstd_decompressor.hpp  stf_zstd_interface.hpp
stfpy/: .gitignore  CMakeLists.txt  setup.py
stfpy/stfpy/: __init__.pxd  __init__.py  stf_branch.pxd  stf_branch.pyx  stf_branch_reader.pxd  stf_branch_reader.pyx  stf_descriptor.pyx  stf_enums.pyx  stf_inst.pxd  stf_inst.pyx  stf_inst_reader.pxd  stf_inst_reader.pyx  stf_record_map.pxd  stf_record_map.pyx  stf_record_types.pyx  stf_reg_def.pyx
stfpy/stfpy/stf_lib/: boost_small_vector.pxd  stf_branch.pxd  stf_branch_reader.pxd  stf_descriptor.pxd  stf_enums.pxd  stf_inst.pxd  stf_inst_reader.pxd  stf_reader_constants.pxi  stf_record.pxd  stf_record_map.pxd  stf_record_types.pxd  stf_reg_def.pxd  stf_serializable_container.pxd
stfpy/tests/: reader_test.py
stfpy/tools/: stfpy_init.py  stfpython
tests/: CMakeLists.txt
tests/stf_writer_test/: CMakeLists.txt  main.cpp
tests/stf_writer_test/golden/: stf_write_test.zstf
